# hololinked

./: .bandit-baseline.json  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  fix_168.py  license.txt  pyproject.toml  pytest.ini  ruff.toml  run_testthing_basic.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml  pytest-dev.yml  python-publish-pypi.yml  python-publish-testpypi.yml  test-dev.yml  test-release.yml  tests.yml
hololinked/: __init__.py  config.py  constants.py  logger.py  persistence.py  schemas.py  serialization.py  serializers.py  utils.py
hololinked/client/: __init__.py  abstractions.py  exceptions.py  factory.py  proxy.py  security.py
hololinked/core/: __init__.py  actions.py  database.py  dataklasses.py  events.py  exceptions.py  logger.py  meta.py  properties.py  property.py  rpc_server.py  serializer_registry.py  state_machine.py  thing.py  utils.py
hololinked/param/: exceptions.py  parameterized.py  parameters.py
hololinked/schema_validators/: __init__.py  json_schema.py  validators.py
hololinked/serializers/: __init__.py  payloads.py  serializers.py
hololinked/server/: HTTPServer.py  __init__.py  dataklasses.py  events.py  (+16 more)
tests/: README.md  conftest.py  test_00_utils.py  test_01_message.py  test_01_message_pytest.py  test_02_socket.py  test_03_serializers.py  test_04_thing_init.py  test_05_brokers.py  test_06_actions.py  test_07_properties.py  test_08_events.py  test_09_rpc_broker.py  test_0_utils.py  test_10_thing_description.py  test_11_rpc_e2e.py  test_11_thing_description.py  test_12_protocols_zmq.py  test_12_protocols_zmq_ipc.py  test_12_protocols_zmq_object_proxy.py  test_13_protocols_http.py  test_13_protocols_zmq_tcp.py  test_14_protocols_http.py  test_14_protocols_http_e2e.py  test_15_protocols_http_e2e.py  test_16_protocols_mqtt.py  test_17_protocols_coap.py  test_1_message.py  test_2_socket.py  test_3_serializers.py  test_4_thing_init.py  test_5_actions.py  test_5_brokers.py  test_6_actions.py  test_6_rpc_broker.py  test_7_actions.py  test_7_properties.py  test_8_actions.py  test_8_events.py  test_8_properties.py  (+8 more)
(+103 files in other folders)
