[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hololinked"
version = "0.2.12"
authors = [
    {name = "Vignesh Vaidyanathan", email = "vignesh.vaidyanathan@hololinked.dev"},
]
description = "A ZMQ-based protocol-agnostic object oriented RPC tool-kit for instrument control/data acquisition or controlling generic python objects."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: System :: Hardware",
    "Development Status :: 4 - Beta"
]
keywords = ["data-acquisition", "zmq-rpc", "SCADA/IoT", "Web of Things"]
dependencies = [
    "argon2-cffi==23.0.0",
    "ifaddr==0.2.0",
    "msgspec==0.18.6",
    "pyzmq>=25.1.0,<26.2",
    "SQLAlchemy==2.0.21",
    "SQLAlchemy_Utils==0.41.1",
    "tornado==6.3.3",
    "jsonschema==4.22.0"
]

[project.urls]
Documentation = "https://hololinked.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/hololinked-dev/hololinked"  # Update with actual repository URL

[tool.setuptools]
packages = ["hololinked", "hololinked.server", "hololinked.rpc", "hololinked.client", "hololinked.param"]

[project.optional-dependencies]
dev = [
    "ConfigParser==7.1.0",
    "fastjsonschema==2.20.0",
    "ipython==8.12.3",
    "numpy==2.1.2",
    "pandas==2.2.3",
    "pydantic>=2.8.0,<3.0.0",
    "serpent==1.41",
]

test = [
    "requests==2.32.3",
    "numpy>=2.0.0",
    "pydantic>=2.8.0,<3.0.0"
    "coverage==7.8.0"
]
    
linux = [
    "uvloop==0.20.0"
]